--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ button{
 }
 
 /* iniciando a página */
-#divUniforme, #divDico, #divAurea, #divFibonacci{
+#divUniforme, #tutorial, #divAurea, #divFibonacci{
     display: none;
 }
 
