--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,6 @@ header {
 }
 
 .main {
-    background-color: #f5f5f5;
     position: absolute;
     left: 30%;
     right: 0;
@@ -53,6 +52,11 @@ button{
 
 /* iniciando a página */
 #divUniforme, #divDico, #divAurea, #divFibonacci, #divBissecao, #divNewton{
+    display: none;
+}
+
+/* Alertas  */
+#alertFormUniforme{
     display: none;
 }
 
