--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,12 @@ button{
 #alertFormUniforme, #alertFormDico, #alertFormAurea, #alertFormFibo, #alertFormBisse, #alertFormNewton{
     display: none;
 }
+
+/* Estilo do texto que indica o ultimo método calculado no modal do gráfico */ 
+.ultimoMetodo{
+    font-size: 25px; 
+    font-style: italic;
+    padding-bottom: 25px;
+    margin-bottom: 20px;
+    border-bottom: 1px dashed black;
+}
